This patch finally makes the c++ problem reporter optional! Also, added "whatsthis" descriptions to the 'C++ Parsing' settings.

BUG: 122385